--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tigger (1.3.4-1kern2) xenial; urgency=medium
+
+  * fixed dependencies
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 19 Jul 2016 10:00:56 +0200
+
 tigger (1.3.4-0trusty) trusty; urgency=medium
 
   * new upstream release
