--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tigger (1.3.5-1) xenial; urgency=medium
+
+  * new upstream release
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 06 Dec 2016 14:56:07 +0200
+
 tigger (1.3.4-1kern2) xenial; urgency=medium
 
   * fixed dependencies
