--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tigger (1.3.7-1) xenial; urgency=medium
+
+  * new upstream release
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Fri, 10 Mar 2017 15:01:49 +0200
+
 tigger (1.3.5-1) xenial; urgency=medium
 
   * new upstream release
