--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+tigger (1.3.9-1) xenial; urgency=medium
+
+  [ Gijs Molenaar ]
+  * Imported Upstream version 1.3.9
+
+  [ Gijs Molenaar (launchpad ppa build key) ]
+
+ -- Gijs Molenaar <gijs@pythonic.nl>  Tue, 17 Oct 2017 15:35:44 +0200
+
 tigger (1.3.7-1) xenial; urgency=medium
 
   * new upstream release
