--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,8 @@
 tigger (1.3.9-1) xenial; urgency=medium
 
-  [ Gijs Molenaar ]
   * Imported Upstream version 1.3.9
 
-  [ Gijs Molenaar (launchpad ppa build key) ]
-
- -- Gijs Molenaar <gijs@pythonic.nl>  Tue, 17 Oct 2017 15:35:44 +0200
+ -- KERN packaging <packaging@kernsuite.info>  Tue, 17 Oct 2017 15:35:44 +0200
 
 tigger (1.3.7-1) xenial; urgency=medium
 
