--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tigger (1.3.9-1kern1) xenial; urgency=medium
+
+  * add tigger metapackage
+
+ -- KERN packaging <packaging@kernsuite.info>  Tue, 17 Oct 2017 17:17:34 +0200
+
 tigger (1.3.9-1) xenial; urgency=medium
 
   * Imported Upstream version 1.3.9
