--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tigger (1.3.9-1kern2) xenial; urgency=medium
+
+  * add missing pybuild debhelper module
+
+ -- KERN packaging <packaging@kernsuite.info>  Thu, 19 Oct 2017 11:06:47 +0200
+
 tigger (1.3.9-1kern1) xenial; urgency=medium
 
   * add tigger metapackage
