--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tigger (1.3.10-1kern1) xenial; urgency=medium
+
+  * new upstream release
+
+ -- KERN packaging <packaging@kernsuite.info>  Mon, 13 Nov 2017 11:03:18 +0200
+
 tigger (1.3.9-1kern2) xenial; urgency=medium
 
   * add missing pybuild debhelper module
