--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tigger (1.4.0-1kern1) xenial; urgency=medium
+
+  * New upstream version 1.4.0
+
+ -- KERN packaging <packaging@kernsuite.info>  Tue, 03 Apr 2018 12:36:38 +0200
+
 tigger (1.3.10-1kern1) xenial; urgency=medium
 
   * new upstream release
