--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-tigger (1.4.0-1) UNRELEASED; urgency=medium
+tigger (1.4.0-1kern1) bionic; urgency=medium
 
   * New upstream version 1.4.0
+  * port to kern-dev
 
- -- KERN packaging <packaging@kernsuite.info>  Mon, 09 Apr 2018 12:55:03 +0000
+ -- KERN packaging <packaging@kernsuite.info>  Mon, 09 Apr 2018 14:11:01 +0000
 
 tigger (1.3.10-1kern1) xenial; urgency=medium
 
