--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tigger (1.4.0-1kern3) bionic; urgency=medium
+
+  * add missing build dep
+
+ -- KERN packaging <packaging@kernsuite.info>  Mon, 09 Apr 2018 14:33:51 +0000
+
 tigger (1.4.0-1kern2) bionic; urgency=medium
 
   * New upstream version 1.4.0
