--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tigger (1.4.0-1kern4) bionic; urgency=medium
+
+  * fixing dependency
+
+ -- KERN packaging <packaging@kernsuite.info>  Tue, 10 Apr 2018 08:51:57 +0000
+
 tigger (1.4.0-1kern3) bionic; urgency=medium
 
   * add missing build dep
