--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tigger (1.4.0-1kern1xenial1) xenial; urgency=medium
+
+  * New upstream version 1.4.0
+  * add missing lsm dep
+
+ -- KERN packaging <packaging@kernsuite.info>  Wed, 25 Apr 2018 11:59:47 +0000
+
 tigger (1.3.10-1kern1) xenial; urgency=medium
 
   * new upstream release
