--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tigger (1.5.0-1kern1) bionic; urgency=medium
+
+  [ Athanaseus Javas Ramaila ]
+  * New upstream release 1.5.0
+  * Python3 support
+
+ -- KERN packaging <packaging@kernsuite.info>  Thu, 11 Jun 2020 09:51:53 +0200
+
 tigger (1.4.0-1kern4) bionic; urgency=medium
 
   * fixing dependency
