--- a/debian/changelog
+++ b/debian/changelog
@@ -61,43 +61,50 @@ tigger (1.3.7-1) xenial; urgency=medium
 
   * new upstream release
 
- -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Fri, 10 Mar 2017 15:01:49 +0200
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Fri, 10 Mar
+2017 15:01:49 +0200
 
 tigger (1.3.5-1) xenial; urgency=medium
 
   * new upstream release
 
- -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 06 Dec 2016 14:56:07 +0200
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 06 Dec
+2016 14:56:07 +0200
 
 tigger (1.3.4-1kern2) xenial; urgency=medium
 
   * fixed dependencies
 
- -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 19 Jul 2016 10:00:56 +0200
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 19 Jul
+2016 10:00:56 +0200
 
 tigger (1.3.4-0trusty) trusty; urgency=medium
 
   * new upstream release
 
- -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Mon, 07 Mar 2016 12:32:46 +0200
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Mon, 07 Mar
+2016 12:32:46 +0200
 
 tigger (1.3.3-2trusty) trusty; urgency=medium
 
   * add more missing build dependencies
 
- -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 02 Feb 2016 11:47:30 +0200
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 02 Feb
+2016 11:47:30 +0200
 
 tigger (1.3.3-1trusty) trusty; urgency=medium
 
   * add missing python-setuptools dependency
 
- -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 02 Feb 2016 11:23:50 +0200
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 02 Feb
+2016 11:23:50 +0200
 
 tigger (1.3.3-0trusty) trusty; urgency=medium
 
   * new upstream release
 
- -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 02 Feb 2016 11:04:13 +0200
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 02 Feb
+2016 11:04:13 +0200
 
 tigger (1.3.2-1trusty) trusty; urgency=low
 
