Add run-time dependecies

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tigger (1.6.0-1kern2) focal; urgency=medium
+
+  [ Athanaseus Javas Ramaila ]
+  * Add run-time dependencies
+
+ -- KERN packaging <packaging@kernsuite.info>  Fri, 11 Feb 2022 09:45:33 +0000
+
 tigger (1.6.0-1kern1) focal; urgency=medium
 
   [ Athanaseus Javas Ramaila ]
