New upstream release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tigger (1.6.1.1-1kern1) focal; urgency=medium
+
+  [ Athanaseus Javas Ramaila ]
+  * New upstream release 1.6.1.1
+
+ -- KERN packaging <packaging@kernsuite.info>  Thu, 08 Jun 2023 19:03:03 +0000
+
 tigger (1.6.0-1kern2) focal; urgency=medium
 
   [ Athanaseus Javas Ramaila ]
