--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tigger (1.6.1.1-1kern2) jammy; urgency=medium
+
+  [ Athanaseus Javas Ramaila ]
+  * Build for jammy
+
+ -- KERN packaging <packaging@kernsuite.info>  Sat, 06 Apr 2024 18:24:59 +0000
+
 tigger (1.6.1.1-1kern1) focal; urgency=medium
 
   [ Athanaseus Javas Ramaila ]
